@@ -1,3 +1,9 @@
+2007-08-20  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (sort_wireless_networks): new function
+		- (nma_menu_device_add_networks): sort networks
+
 2007-08-17  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
